--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
         "clsx": "^2.1.1",
         "date-fns": "^4.1.0",
         "framer-motion": "^12.6.5",
+        "laravel-echo": "^2.0.2",
         "lucide-react": "^0.488.0",
         "next-themes": "^0.4.6",
+        "pusher-js": "^8.4.0",
         "react-icons": "^5.5.0",
         "tailwind-merge": "^3.2.0",
         "tailwindcss-animate": "^1.0.7"
